--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,39 @@
+:root {
+    --black: #212121;
+    --white: #f5f5f5;
+    --grey: #8b8b8b;
+
+    --red: #ff1443;
+    --green: #50c878;
+    --yellow: #ffd700;
+    --orange: #ff7622;
+
+    --spacing: 1rem;
+    --border-radius: 0.5rem;
+}
+
+html[data-theme="light"] {
+    --color-base: var(--white);
+    --color-text: var(--black);
+
+    --color-primary: var(--red);
+
+    .lighter {
+        display: none;
+    }
+}
+
+html[data-theme="dark"] {
+    --color-base: var(--black);
+    --color-text: var(--white);
+
+    --color-primary: var(--red);
+
+    .darker {
+        display: none;
+    }
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -7,6 +43,14 @@ body {
 
     width: 100%;
     height: 100dvh;
+
+    font-family:
+        system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
+        Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif,
+        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+    color: var(--color-text);
+    background: var(--color-base);
 }
 
 body {
@@ -18,20 +62,94 @@ body {
     }
 }
 
+/* Links */
+a {
+    color: var(--color-primary);
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/* Buttons */
+button {
+    border: none;
+    cursor: pointer;
+    padding: 0.6rem 1rem;
+    color: var(--color-base);
+    button {
+        border: none;
+        cursor: pointer;
+        padding: 0.6rem 1rem;
+        color: var(--color-base);
+        border-radius: var(--border-radius);
+        background: var(--color-primary);
+    }
+    background: var(--color-primary);
+}
+
 header#_header {
     height: 56px;
 
     display: flex;
     align-items: center;
+}
 
-    img#_header-logo {
-        height: 32px;
+#_header-logo {
+    height: 32px;
+
+    > img {
+        height: 100%;
     }
 }
 
-.squared {
-    background-image:
-        linear-gradient(90deg, rgb(246, 246, 246) 1px, rgba(0, 0, 0, 0) 1px),
-        linear-gradient(rgb(246, 246, 246) 1px, rgba(0, 0, 0, 0) 1px);
-    background-size: 14px 14px;
+#_header-menu {
+    padding: 0 2rem;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 1rem;
+    grid-row-gap: 0px;
+
+    > a {
+        font-size: 1.2rem;
+        font-weight: 500;
+
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        text-decoration: none;
+
+        &:hover {
+            color: var(--red);
+        }
+    }
+}
+
+#_header_extra {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: flex-end;
+
+    flex: 1;
+}
+
+#_theme-toggle {
+    width: 2rem;
+    height: 2rem;
+    border: none;
+    padding: 0rem;
+    cursor: pointer;
+    border-radius: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    > img {
+        width: 1.2rem;
+        height: 1.2rem;
+    }
 }
