--- a/src/css/main.css
+++ b/src/css/main.css
@@ -159,6 +159,32 @@ header#_header {
     }
 }
 
+/* Index page */
+#landing {
+    padding: var(--spacing);
+
+    background-image: radial-gradient(
+        circle at 4px 4px,
+        var(--color-text) 1px,
+        transparent 0
+    );
+
+    background-size: 15px 15px;
+    background-position-x: 7.5px;
+    background-position-y: 7.5px;
+    filter: opacity(20%);
+
+    #shout-out {
+        height: 200px;
+        opacity: 100%;
+        padding: 0 calc(1.6 * var(--spacing));
+
+        > .shout-out-item {
+            height: 100%;
+        }
+    }
+}
+
 /* `sm` applies to x-small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
     #_header-menu {
@@ -171,6 +197,21 @@ header#_header {
                 width: 24px;
                 height: 24px;
                 display: inline-block;
+            }
+        }
+    }
+
+    #landing {
+        #shout-out {
+            width: 100%;
+            height: 200px;
+
+            transform-origin: left;
+            transform: translate(45%, -50%) rotate(90deg);
+
+            > .shout-out-item {
+                /* transform: rotate(90deg); */
+                height: 100%;
             }
         }
     }
